tests/errors/cpp/expand/dont-expand-arg-too-early.h
#define comma ,
#define m(x, y)
m(1 comma 2) // error: only 1 arg given, but 2 required
